# hepgen

./: .gitignore  README.md  checkpi0etaneutron.dat.txt  compile.bash  eta_0_neutron_0.txt  eta_0_neutron_0_with_tables.txt  eta_0_neutron_1.txt  eta_0_neutron_1_with_tables.txt  eta_1_neutron_0.txt  eta_1_neutron_1.txt  eta_hbd_hbu_0.3_without_tab.txt  eta_hbd_hbu_0_without_tab.txt  exp_data.txt  howto  libGKPi0_sav2.cpp  libGKPi0_save.cpp  libGKPi0_vpk.cpp  nosqrt_nonorm.txt  peter_eta_hbu_hbd_0.3.txt  peter_pi0.dat_hbu_hbd_0.0_0.3.txt  peter_result.txt  pi0.txt  pi0_2.21_0.275.txt  pi0_2.2_0.28.txt  pi0_hbd_hbu_0.3_without_tab.txt  pi0_hbd_hbu_0_without_tab.txt  pi0_notab.txt  pi0_tab.txt  pi0_tab_old.txt
HEPGenPlusPlus-1.2-RC1/: CMakeLists.txt  README  config.h.in  env.csh  example.py  getxsec.py
HEPGenPlusPlus-1.2-RC1/cmake/Modules/: FindROOT.cmake
HEPGenPlusPlus-1.2-RC1/evDisGL/: CMakeLists.txt  dialog.cpp  dialog.h  evDisGL.cpp  glWidget.cpp  glWidget.h  physicsEngine.cpp  physicsEngine.h  physicsEngineBase.h  physicsEngineLepto.cpp  physicsEngineLepto.h  shaders.h  vStructs.h
HEPGenPlusPlus-1.2-RC1/hepgen_c/: CMakeLists.txt  main.cpp  main_curses.cpp
HEPGenPlusPlus-1.2-RC1/hepgen_in_phast/: UserEvent1337.cc  UserEvent1338.cc  WeightInfo.cc  WeightInfo.h  hepgen_in_phast.cc  hepgen_in_phast.h
HEPGenPlusPlus-1.2-RC1/jsub/: .gitignore  genBin.py  makeGKTable.template  sub.csh
HEPGenPlusPlus-1.2-RC1/libGKPi0/: CMakeLists.txt  fitETbar_prep.cpp  fitHT_prep.cpp  fitpi0.cpp  fitpi0_grid.cpp  fitpi0_prep.cpp  gkCrossSection.cpp  gkCrossSection_eta.cpp  gkCrossSection_etaN.cpp  gkCrossSection_pi0N.cpp  gkCrossSection_pi0eta.cpp  gkCrossSection_pi0n.cpp  gkSubProcessTable.cpp  gkSubProcessTable.h  gkTest.cpp  gkXSbatch.cpp  libGKPi0.cpp  libGKPi0.h  printETbar.cpp  printGFFs.cpp  printTheoreticalComparison.cpp  tableNator.cpp
HEPGenPlusPlus-1.2-RC1/libVGG/: CMakeLists.txt  GPDQ.cc  GPDQ.hh  JlabVcs.cc  JlabVcs.hh  mrst99.cc  mrst99.hh
HEPGenPlusPlus-1.2-RC1/libhepgen/: CMakeLists.txt  config.h  hMosseGen.cpp  hMosseGen.h  hVGGgen.cpp  hVGGgen.h  hWeightingInterface.h  hbeamfile.cpp  hbeamfile.h  hbookbackend.h  hbookbackendASCII.cpp  hbookbackendASCII.h  hbookbackendROOT.cpp  hbookbackendROOT.h  hbooker.cpp  hbooker.h  hcardparser.cpp  hcardparser.h  hconstants.h  hdvcsgen.cpp  hdvcsgen.h  hevent.cpp  hevent.h  hgenmanager.cpp  hgenmanager.h  hhelper.cpp  hhelper.h  hjpsigen.cpp  hjpsigen.h  hlorentzvector.cpp  hlorentzvector.h  homegagen.cpp  homegagen.h  homegagenpigamma.cpp  homegagenpigamma.h  houtput.cpp  houtput.h  houtputbackend.cpp  houtputbackend.h  houtputbackendLEPTO.cpp  (+31 more)
HEPGenPlusPlus-1.2-RC1/libhepgen/CLHEP_EMBEDDED/Random/Random/: DoubConv.hh  EngineFactory.h  JamesRandom.h  NonRandomEngine.h  RandEngine.h  RandGauss.h  RandGaussQ.h  RandGaussT.h  Random.h  RandomEngine.h  Ranlux64Engine.h  RanluxEngine.h  SeedTable.h  Stat.h  StaticRandomStates.h  engineIDulong.h
HEPGenPlusPlus-1.2-RC1/libhepgen/CLHEP_EMBEDDED/Random/src/: DoubConv.cc  EngineFactory.cc  JamesRandom.cc  RandEngine.cc  RandGauss.cc  RandGaussQ.cc  RandGaussT.cc  Random.cc  RandomEngine.cc  Ranlux64Engine.cc  RanluxEngine.cc  StaticRandomStates.cc  engineIDulong.cc  erfQ.cc  flatToGaussian.cc
HEPGenPlusPlus-1.2-RC1/libhepgen/CLHEP_EMBEDDED/Utility/Utility/: PhysicalConstants.h  SystemOfUnits.h  memory.h  noncopyable.h  type_traits.h
HEPGenPlusPlus-1.2-RC1/share/: Doxyfile
HEPGenPlusPlus-1.2-RC1/share/datacards/: hepgen_dvcs.data  hepgen_dvcs_mosse.data  hepgen_jpsi.data  hepgen_omega.data  hepgen_omega_2b.data  hepgen_pamBH.data  hepgen_pi0.data  hepgen_pi0_transv.data  hepgen_rho.data  hepgen_rhoplus.data
HEPGenPlusPlus-1.2-RC1/share/eta_cache/: tableIndex
HEPGenPlusPlus-1.2-RC1/share/old_pi0_cache/: tableIndex
HEPGenPlusPlus-1.2-RC1/share/pi0_cache/: tableIndex
HEPGenPlusPlus-1.2-RC1/share/swig/: CMakeLists.txt  libhepgen_bindings.i
HEPGenPlusPlus-1.2-RC1/tools/: CMakeLists.txt  anaPlugin.cpp  anaPlugin.h  beamFileSplitter.cpp  beamfileplotter.cc  leptoFileAnalyzer.cpp  lfcommon.h  lfread.cpp  lfread.h  lfwrite.cpp  lfwrite.h  lumiCalc.cc  makeGKPi0Table.py  makePlotsFromFile.cc  splitter.cpp  xSecPlotter.cc
